# talk

./: .gitignore  .rust-analyzer.json  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  api-contracts.md  clippy.toml  data-model.md  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: WEATHER_DEMO_README.md  customer_agent.rs  customer_complaint.rs  onboarding_journey.rs  semantic_agent.rs  simple_agent.rs  weather_agent.rs  weather_agent_live.rs
src/: agent.rs  context.rs  embedding.rs  error.rs  guideline.rs  journey.rs  lib.rs  session.rs  tool.rs  types.rs
src/provider/: anthropic.rs  mod.rs  openai.rs
src/storage/: memory.rs  mod.rs
tests/: agent_integration_tests.rs  guideline_integration_tests.rs  journey_tests.rs  provider_contracts.rs  semantic_matching_tests.rs  storage_contracts.rs  tool_tests.rs
tests/integration/: agent_tests.rs  guideline_tests.rs
