[package]
name = "talk"
version = "0.1.0"
edition = "2021"
authors = ["Talk Contributors"]
description = "A Rust library for creating controlled LLM agents with behavioral guidelines, tool integration, and multi-step conversation journeys"
license = "MIT OR Apache-2.0"
repository = "https://github.com/[org]/talk"
keywords = ["ai", "llm", "agent", "parlant", "conversation"]
categories = ["development-tools"]
rust-version = "1.90"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-openai = "0.26"
async-trait = "0.1"
aho-corasick = "1"
regex = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tracing = "0.1"

[dev-dependencies]
anyhow = "1"
tokio-test = "0.4"

[features]
default = []
redis-storage = ["dep:redis"]
postgres-storage = ["dep:sqlx"]
all-storage = ["redis-storage", "postgres-storage"]

[dependencies.redis]
version = "0.27"
optional = true
features = ["tokio-comp", "connection-manager"]

[dependencies.sqlx]
version = "0.8"
optional = true
features = ["runtime-tokio", "postgres"]
